# manga-tagger

./: .env  .env.example  .gitignore  51標籤庫.json  CHANGELOG.md  CHINESE_EMBEDDING_INTEGRATION.md  DEVELOPMENT.md  FIX_COMPLETE_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RTX5090_FINAL_SOLUTION.md  RTX5090_PRACTICAL_GUIDE.md  bge_hybrid_results.json  bge_m3_results.json  chinese_embedding_deployment_guide.md  chinese_embedding_models_comparison.md  demo.py  examples.py  kill_ports.py  multilingual_test.json  pyproject.toml  requirements.txt  rtx5090_check.py  rtx5090_deployment_guide.md  start_all.py  start_api.py  start_local_server.bat  start_mock.py  start_server.bat  start_server.py  start_server_debug.py  streamlit_app.py  test_bge_m3.py  test_chinese_embedding.py  test_debug.py  test_embeddings.py  vector_store.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
app/: auth.py  cache.py  config.py  dependencies.py  exceptions.py  http_client.py  logging_config.py  main.py  metrics.py  models.py  utils.py
app/api/: routes.py  routes_v2.py
app/core/: __init__.py  background_tasks.py  cache.py  circuit_breaker.py  config.py  embedding_cache.py  exceptions.py  http_client.py  logging_config.py  metrics.py  rate_limiter.py
app/domain/: __init__.py  constants.py  models.py  pipeline.py  prompts.py
app/infrastructure/: __init__.py
app/middleware/: error_handler.py  metrics_middleware.py  rate_limit.py  request_id.py  security.py  tracing.py
app/performance/: __init__.py  async_utils.py  memory.py
app/services/: chinese_embedding_service.py  lm_studio_embedding_service.py  lm_studio_llm_service.py  lm_studio_vlm_service.py  lm_studio_vlm_service_v2.py  lm_studio_vlm_service_v3.py  mock_services.py  pipeline.py  prompts.py  rag_service.py  tag_conflicts.json  tag_constants.py  tag_library_service.py  tag_mapper.py  tag_parser.py  tag_recommender_service.py
app/tasks/: __init__.py  tagging_tasks.py  worker.py
app/websocket/: __init__.py  connection_manager.py
archive/reports_archive/: COMPLETION_REPORT.md  DEBUG_SUMMARY.md  EMERGENCY_FIX_PLAN.md  IMPLEMENTATION_REPORT.md  LM_STUDIO_VERIFICATION_REPORT.md  OPTIMIZATION_COMPLETE_SUMMARY.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT_PHASE1.md  TESTING_REPORT.md  (+7 more)
scripts/: clean_rag_test_data.py  convert_tags.py  eval_accuracy.py  fix_tag_categories.py  init_rag.py  release.sh  run_streamlit.py  smoke_test.py  standardize_top100_tags.py  tag_loader.py  tag_matcher.py  validate_tag_quality.py
tests/: conftest.py  test_api_smoke.py  test_security.py
(+230 files in other folders)
