[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-tagger"
version = "2.0.0"
description = "Manga cover auto-tagger using local VLM (LM Studio qwen3.6-35b) and RAG"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.22",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Local UI
    "streamlit>=1.49.0",

    # HTTP clients
    "httpx>=0.28.0",
    "requests>=2.32.0",

    # Numerics & embeddings
    "numpy>=2.2.0",
    "sentence-transformers>=3.3.0",

    # RAG store
    "chromadb>=0.5.0",

    # Image processing
    "Pillow>=12.1.1",

    # Task queue & caching
    "redis>=5.0.0",
    "rq>=1.16.0",

    # Process / system utils
    "psutil>=6.1.0",

    # Observability
    "structlog>=25.0.0",
    "prometheus-client>=0.20.0",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser]
# Conventional commits format
# feat: -> minor version bump
# fix: -> patch version bump
# feat!:, fix!: -> major version bump
# Other types -> no release
patterns = [
    "^(?P<type>feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(.+\\))?(?P<scope>!)?: (?P<message>.+)",
]

[tool.semantic_release.version]
# Semantic versioning scheme
major = "{major}"
minor = "{minor}"
patch = "{patch}"

[tool.semantic_release.release]
# Release assets (optional)
# assets = []

[tool.semantic_release.changelog]
# Changelog configuration
template = """\
## What's Changed

{changes}

---
*Auto-generated by python-semantic-release*
"""

[tool.semantic_release.git]
# Git configuration
commit_message = "chore(release): {version}"
tag_message = "{version}"

# Ruff Linter Configuration
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# MyPy Configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
